--- a/index.html
+++ b/index.html
@@ -81,6 +81,27 @@
         </div>
       </div>
     </nav>
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./resouerces/carrusel1.webp" class="d-block w-100" alt="Propaganda1">
+        </div>
+        <div class="carousel-item">
+          <img src="./resouerces/carrusel2.webp" class="d-block w-100" alt="Propaganda2">
+        </div>
+        <div class="carousel-item">
+          <img src="./resouerces/carrusel3.webp" class="d-block w-100" alt="Propaganda3">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
