--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -102,6 +102,40 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <section class="mas-vendidos">
+      <div>
+        <img src="./resouerces/aceite natura.webp" alt="">
+        <p>Producto</p>
+      </div>
+      <div>
+        <img src="./resouerces/aceite natura.webp" alt="">
+        <p>Producto</p>
+      </div>
+      <div>
+        <img src="./resouerces/aceite natura.webp" alt="">
+        <p>Producto</p>
+      </div>
+      <div>
+        <img src="./resouerces/aceite natura.webp" alt="">
+        <p>Producto</p>
+      </div>
+      <div>
+        <img src="./resouerces/aceite natura.webp" alt="">
+        <p>Producto</p>
+      </div>
+      <div>
+        <img src="./resouerces/aceite natura.webp" alt="">
+        <p>Producto</p>
+      </div>
+      <!-- <div>
+        <img src="./resouerces/aceite natura.webp" alt="">
+        <p>Producto</p>
+      </div>
+      <div>
+        <img src="./resouerces/aceite natura.webp" alt="">
+        <p>Producto</p>
+      </div> -->
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
