--- a/index.html
+++ b/index.html
@@ -104,38 +104,43 @@
     </div>
     <section class="mas-vendidos">
       <div>
-        <img src="./resouerces/aceite natura.webp" alt="">
-        <p>Producto</p>
+        <img src="./resouerces/aceite natura.webp" alt="Aceite de Girasol">
+        <p>Aceite de Girasol - 1.5L</p>
+        <p>$1997.8</p>
       </div>
       <div>
-        <img src="./resouerces/aceite natura.webp" alt="">
-        <p>Producto</p>
+        <img src="./resouerces/cocina.webp" alt="Cocina Whilpool">
+        <p>Whilpool Cocina</p>
+        <p>$969.999</p>
       </div>
       <div>
-        <img src="./resouerces/aceite natura.webp" alt="">
-        <p>Producto</p>
+        <img src="./resouerces/heladera.webp" alt="Heladera Samsung">
+        <p>Heladera Samsung -350L</p>
+        <p>$1.291.999</p>
       </div>
       <div>
-        <img src="./resouerces/aceite natura.webp" alt="">
-        <p>Producto</p>
+        <img src="./resouerces/yerba.webp" alt="Yerba Playadito">
+        <p>Playadito - 1kg</p>
+        <p>$2668.25</p>
       </div>
       <div>
-        <img src="./resouerces/aceite natura.webp" alt="">
-        <p>Producto</p>
+        <img src="./resouerces/pedigree.webp" alt="Pedigree Alimento mascotas">
+        <p>Pedigree - 3kg</p>
+        <p>$8160</p>
       </div>
       <div>
-        <img src="./resouerces/aceite natura.webp" alt="">
-        <p>Producto</p>
+        <img src="./resouerces/cerveza heineken.webp" alt="cerveza heineken">
+        <p>Heineken - 330ml</p>
+        <p>$1600</p>
       </div>
-      <!-- <div>
-        <img src="./resouerces/aceite natura.webp" alt="">
-        <p>Producto</p>
-      </div>
-      <div>
-        <img src="./resouerces/aceite natura.webp" alt="">
-        <p>Producto</p>
-      </div> -->
     </section>
+    <footer class="pie">
+      
+        <p>Ledesma Fernando</p>
+        <p>mail:asdasda@gmail.com</p>
+        <p>Todos los derechos reservados</p>
+      
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
