--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Inicio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary letra">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Chango</a>
         <button
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active" aria-current="Inicio" href="/index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contacto</a>
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="#">Nosotros</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Perfil</a>
+                <a class="nav-link" href="./pages/perfil.html">Perfil</a>
              </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Carrito</a>
