--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -118,6 +118,11 @@
             </div>
         </form>
       </section>
+      <footer class="pie">      
+        <p>Ledesma Fernando</p>
+        <p>mail:asdasda@gmail.com</p>
+        <p>Todos los derechos reservados</p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
